Releases for multiple JVMs